home-cluster/metallb-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  labels:
    kubernetes.io/metadata.name: metallb-system
